--- a/assets/sass/app/profile/profile.scss
+++ b/assets/sass/app/profile/profile.scss
@@ -1,5 +1,9 @@
-$backgroundColor : #fdfdfd;
+$backgroundColor: #fdfdfd;
 $brand-body-color: #015;
+
+*[posts-scroll] {
+    overflow-y: scroll;
+}
 
 .navbar {
     margin-bottom: 0px;
@@ -16,15 +20,17 @@ $brand-body-color: #015;
         }
     }
 }
-.row-timeline{
+
+.row-timeline {
     padding: 20px;
     color: $brand-body-color;
 }
+
 .timeline-cover {
     width: 100%;
     height: 400px;
     overflow: hidden;
-    position:relative;
+    position: relative;
     img {
         object-fit: cover;
         display: block;
@@ -56,15 +62,15 @@ $brand-body-color: #015;
 }
 
 .profile-avatar {
-    width:200px;
-    height:200px;
+    width: 200px;
+    height: 200px;
 }
 
 .avatar-wrapper {
     top: -210px;
-    margin:auto auto -200px auto;
+    margin: auto auto -200px auto;
     width: 200px;
-    position:relative;
+    position: relative;
     i, .cssload-container {
         cursor: pointer;
         background: white;
@@ -101,6 +107,7 @@ $brand-body-color: #015;
         }
     }
 }
+
 .profile-followers {
     .profile-list-avatar {
         float: left;
@@ -118,6 +125,13 @@ $brand-body-color: #015;
 }
 
 .profile-posts {
+    .post-spread-section {
+        margin-bottom: -3px;
+    }
+    .post-wrapper {
+        //max-height: 100vh;
+        //overflow-y: scroll;
+    }
     .write-post-row {
         background-color: #f8f8f8;
         .text-area {
@@ -139,10 +153,12 @@ $brand-body-color: #015;
     .post-row {
 
     }
-    .waiting-row {
+    .hide-row {
         border-bottom: none;
         border-right: none;
         border-left: none;
+    }
+    .waiting-row {
         height: 50px;
         .cssload-container {
             top: 40px;
