--- a/views/partials/header-fix-sign-in-menu.html
+++ b/views/partials/header-fix-sign-in-menu.html
@@ -11,6 +11,7 @@
                     aria-expanded="false"
                     aria-controls="navbar"><i></i>
                 </a>
+                <a class="navbar-brand" href="/">Deeployer</a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-left">
