fix the time update

--- a/views/partials/head.html
+++ b/views/partials/head.html
@@ -24,6 +24,7 @@
 <script src="/assets/bower/jquery/dist/jquery.min.js"></script>
 <script src="/assets/bower/jquery.easing/js/jquery.easing.js"></script>
 <script src="/assets/bower/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="/assets/bower/moment/min/moment.min.js"></script>
 <script src="/assets/js/jquery.waypoints.min.js"></script>
 <script src="/assets/js/owl.carousel.min.js"></script>
 <script src="/assets/js/main.js"></script>
