--- a/views/account/pages/activation/account.html
+++ b/views/account/pages/activation/account.html
@@ -2,9 +2,9 @@
 
 {% block head %}
 {% parent %}
-<script>
-    angular.module("deeployer", []);
-</script>
+
+{% include '../../../partials/angular-module.html' %}
+
 <link rel="stylesheet" href="/assets/css/app/account/activation/account.css">
 <script src='/assets/js/app/account/activation/account.js'></script>
 <script>
