--- a/views/console/pages/console.html
+++ b/views/console/pages/console.html
@@ -4,9 +4,8 @@
 {% block head %}
 {% parent %}
 
-<script>
-    angular.module("deeployer", []);
-</script>
+{% include '../../partials/angular-module.html' %}
+
 {% endblock %}
 
 {% block angularSection %}
