--- a/views/partials/head.html
+++ b/views/partials/head.html
@@ -3,7 +3,6 @@
         rel='stylesheet'
         type='text/css'>
 
-
 <link rel="stylesheet" href="/assets/css/loading.css">
 <!-- Animate.css -->
 <link rel="stylesheet" href="/assets/css/animate.css">
@@ -31,7 +30,8 @@
 
 <!-- AngularJs -->
 <script src="/assets/bower/angular/angular.min.js"></script>
-
+<script src="/assets/node/socket.io-client/socket.io.js"></script>
+<script src="/assets/bower/angular-socket-io/socket.min.js"></script>
 
 <!-- FOR IE9 below -->
 <!--[if lt IE 9]>
