--- a/views/account/pages/activation/sharing.html
+++ b/views/account/pages/activation/sharing.html
@@ -3,9 +3,9 @@
 {% block head %}
 {% parent %}
 <link rel="stylesheet" href="/assets/bower/bootstrap-social/bootstrap-social.css">
-<script>
-    angular.module("deeployer", []);
-</script>
+
+{% include '../../../partials/angular-module.html' %}
+
 <script src='/assets/js/app/account/activation/sharing.js'></script>
 
 {% include '../../../partials/facebook-sdk.html' %}
