--- a/views/partials/angular-module.html
+++ b/views/partials/angular-module.html
@@ -5,7 +5,9 @@
         ])
         .factory('socket', ['socketFactory', function (socketFactory) {
             window.socketIo = window.socketIo || socketFactory({
-                    ioSocket: io('[[ socketPath ]]', {'transports': ['websocket']}).connect()
+                    ioSocket: io.connect('[[ socketPath ]]', {
+                        transports: ['websocket']
+                    })
                 });
 
             return window.socketIo;
