--- a/views/partials/angular-module.html
+++ b/views/partials/angular-module.html
@@ -1,26 +1,37 @@
 <script>
-    angular
-        .module("deeployer", [
-            'btford.socket-io'
-        ])
-        .factory('$socket', ['socketFactory', function (socketFactory) {
-            window.socketIo = window.socketIo || socketFactory({
-                    ioSocket: io.connect('[[ socketPath ]]', {
-                        transports: ['websocket']
-                    })
-                });
-
-            window.socketIo.on('hi', function (data) {
-                console.log('hi message', data);
-                window.socketIo.emit('hi-back', 'test');
-            });
-            window.socketIo.on('connect', function () {
-                console.log('connected');
-            });
-            window.socketIo.on('disconnect', function () {
-                console.log('disconnected');
+    var app = angular.module("deeployer", ['btford.socket-io']);
+    app.factory('$socket', ['socketFactory', function (socketFactory) {
+        window.socketIo = window.socketIo || socketFactory({
+                ioSocket: io.connect('[[ socketPath ]]', {
+                    transports: ['websocket']
+                })
             });
 
-            return window.socketIo;
-        }]);
+        window.socketIo.on('hi', function (data) {
+            console.log('hi message', data);
+            window.socketIo.emit('hi-back', 'test');
+        });
+        window.socketIo.on('connect', function () {
+            console.log('connected');
+        });
+        window.socketIo.on('disconnect', function () {
+            console.log('disconnected');
+        });
+
+        return window.socketIo;
+    }]);
+
+    app.directive('ngEnter', function () {
+        return function (scope, element, attrs) {
+            element.bind("keydown keypress", function (event) {
+                if (event.which === 13) {
+                    scope.$apply(function () {
+                        scope.$eval(attrs.ngEnter);
+                    });
+
+                    event.preventDefault();
+                }
+            });
+        };
+    });
 </script>
