--- a/views/layouts/layout.html
+++ b/views/layouts/layout.html
@@ -29,7 +29,7 @@
     {% include '../partials/footer.html' %}
     {% endif %}
 
-    {% if request.isAuthenticated() %}
+    {% if request.isAuthenticated() && newPostModal %}
         {% include '../partials/modals/new-post.html' %}
     {% endif %}
 </body>
