--- a/views/partials/head.html
+++ b/views/partials/head.html
@@ -26,6 +26,9 @@
 <script src="/assets/bower/moment/min/moment.min.js"></script>
 <script src="/assets/js/jquery.waypoints.min.js"></script>
 <script src="/assets/js/owl.carousel.min.js"></script>
+<!-- notifyjs -->
+<script src="/assets/bower/notifyjs/dist/notify.js"></script>
+
 <script src="/assets/js/main.js"></script>
 
 <!-- AngularJs -->
