--- a/views/partials/angular-module.html
+++ b/views/partials/angular-module.html
@@ -1,20 +1,24 @@
 <script>
+    window.socketStatus = false;
     window.controllers = {};
     var app = angular.module("deeployer", ['btford.socket-io']);
     app.service('$socketConnection', ['socketFactory', function (socketFactory) {
         window.socketIo = window.socketIo || socketFactory({
                 ioSocket: io.connect('[[ socketPath ]]', {
+                    query     : jQuery.param({
+                        region: '[[ socketRegion|default('global') ]]'
+                    }),
                     transports: ['websocket']
                 })
             });
 
-//        window.socketIo.on('connect', function () {
-//            console.log('connected');
-//        });
-//
-//        window.socketIo.on('disconnect', function () {
-//            console.log('disconnected');
-//        });
+        window.socketIo.on('connect', function () {
+            window.socketStatus = true;
+        });
+
+        window.socketIo.on('disconnect', function () {
+            window.socketStatus = false;
+        });
 
         this.socket = window.socketIo;
 
