fix the process GC and ssl

--- a/views/partials/angular-module.html
+++ b/views/partials/angular-module.html
@@ -13,7 +13,8 @@
                     query     : jQuery.param({
                         region: '[[ socketRegion|default('global') ]]'
                     }),
-                    transports: ['websocket']
+                    transports: ['websocket'],
+                    secure: true
                 })
             });
 
@@ -43,7 +44,7 @@
 
         var geoOptions = {
             enableHighAccuracy: true,
-            timeout: 5000,
+            timeout: 10000,
             maximumAge: 0
         };
 
