google map on console

--- a/views/partials/angular-module.html
+++ b/views/partials/angular-module.html
@@ -19,6 +19,9 @@
             });
 
         var refreshLocation = function (position) {
+            var refreshLocationDispatcher = window.refreshLocation || function () {};
+            refreshLocationDispatcher(position);
+
             window.socketIo.emit('refresh-location', {
                 position: position
             });
