--- a/views/console/pages/console.html
+++ b/views/console/pages/console.html
@@ -5,9 +5,11 @@
 
 {% block head %}
 {% parent %}
+<link rel="stylesheet" href="/assets/css/app/console/console.css">
 
 {% include '../../partials/angular-module.html' %}
-
+{% include '../../partials/console-map.html' %}
+<script src='/assets/js/app/console/console.js'></script>
 {% endblock %}
 
 {% block angularSection %}
@@ -17,17 +19,23 @@ ng-app="deeployer"
 {% block content %}
 {% include '../../partials/header-fix-sign-in-menu.html' %}
 <div class="console-page">
-</div>
+    <div class="row-header">
+        <div class="map-view"></div>
+        <div class="clearfix"></div>
+    </div>
 
-<div class="row-timeline">
-    <div class="col-md-3">
-    </div>
-    <div class="col-md-6">
-        {% set profilePartialPage = '../../partials/profile/posts.html' %}
-        {% include profilePartialPage %}
-    </div>
-    <div class="col-md-3">
-    </div>
     <div class="clearfix"></div>
+    <div class="row-timeline">
+        asdf
+        <div class="col-md-3">
+        </div>
+        <div class="col-md-6">
+            <!--{% set profilePartialPage = '../../partials/profile/posts.html' %}-->
+            <!--{% include profilePartialPage %}-->
+        </div>
+        <div class="col-md-3">
+        </div>
+        <div class="clearfix"></div>
+    </div>
 </div>
 {% endblock %}
