--- a/views/partials/console-map.html
+++ b/views/partials/console-map.html
@@ -1,18 +1,44 @@
 <script>
     function initMap() {
-        var styleArray = [
-            {
-                featureType: 'all',
-                stylers: [
-                    {saturation: -80}
-                ]
-            }
-        ];
+        var mapStyles = [{
+            "featureType": "all",
+            "elementType": "all",
+            "stylers": [{"hue": "#000000"}, {"saturation": -100}, {"lightness": -30}]
+        }, {
+            "featureType": "all",
+            "elementType": "labels.text.fill",
+            "stylers": [{"color": "#ffffff"}]
+        }, {
+            "featureType": "all",
+            "elementType": "labels.text.stroke",
+            "stylers": [{"color": "#353535"}]
+        }, {
+            "featureType": "landscape",
+            "elementType": "geometry",
+            "stylers": [{"color": "#656565"}]
+        }, {
+            "featureType": "poi",
+            "elementType": "geometry.fill",
+            "stylers": [{"color": "#505050"}]
+        }, {
+            "featureType": "poi",
+            "elementType": "geometry.stroke",
+            "stylers": [{"color": "#808080"}]
+        }, {
+            "featureType": "road",
+            "elementType": "geometry",
+            "stylers": [{"color": "#454545"}]
+        }, {
+            "featureType": "transit",
+            "elementType": "labels",
+            "stylers": [
+                {"hue": "#000000"}, {"saturation": -100}, {"lightness": -40}, {"invert_lightness": false}, {"gamma": 1.5}
+            ]
+        }];
 
         window.map = window.map || new google.maps.Map($('.map-view').get(0), {
-                center: {lat: 0, lng: 0},
                 scrollwheel: false,
-                styles: styleArray,
+                styles: mapStyles,
                 zoom: 15,
                 maxZoom: 16,
                 minZoom: 13,
