load posts on page load. with bug

--- a/views/console/pages/console.html
+++ b/views/console/pages/console.html
@@ -23,15 +23,12 @@ ng-app="deeployer"
         <div class="map-view"></div>
         <div class="clearfix"></div>
     </div>
-
     <div class="clearfix"></div>
     <div class="row-timeline">
-        asdf
         <div class="col-md-3">
         </div>
         <div class="col-md-6">
-            <!--{% set profilePartialPage = '../../partials/profile/posts.html' %}-->
-            <!--{% include profilePartialPage %}-->
+            {% include '../../partials/console/posts.html' %}
         </div>
         <div class="col-md-3">
         </div>
