--- a/views/console/pages/console.html
+++ b/views/console/pages/console.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" href="/assets/css/app/console/console.css">
 
 {% include '../../partials/angular-module.html' %}
-{% include '../../partials/console-map.html' %}
+<script src="https://maps.googleapis.com/maps/api/js?key=[[ googleMapApiKey ]]"></script>
 <script src='/assets/js/app/console/console.js'></script>
 {% endblock %}
 
@@ -18,7 +18,7 @@ ng-app="deeployer"
 
 {% block content %}
 {% include '../../partials/header-fix-sign-in-menu.html' %}
-<div class="console-page">
+<div class="console-page" ng-controller="ConsoleController">
     <div class="row-header">
         <div class="map-view"></div>
         <div class="clearfix"></div>
