store the view data on map

--- a/views/console/pages/console.html
+++ b/views/console/pages/console.html
@@ -20,7 +20,7 @@ ng-app="deeployer"
 {% include '../../partials/header-fix-sign-in-menu.html' %}
 <div class="console-page" ng-controller="ConsoleController">
     <div class="row-header">
-        <div class="map-view"></div>
+        <map-view></map-view>
         <div class="clearfix"></div>
     </div>
     <div class="clearfix"></div>
