--- a/views/partials/angular-module.html
+++ b/views/partials/angular-module.html
@@ -2,7 +2,7 @@
     window.socketStatus = false;
     window.controllers = {};
     var app = angular.module("deeployer", ['btford.socket-io']);
-    app.service('$socketConnection', ['socketFactory', function (socketFactory) {
+    app.service('$socketConnection', ['socketFactory', 'mapFactory', function (socketFactory, mapFactory) {
         window.geoLocationPositions = {
             latitude: null,
             longitude: null
@@ -25,6 +25,22 @@
             window.socketIo.emit('refresh-location', {
                 position: position
             });
+
+            if (mapFactory) {
+                window.socketIo.emit('refresh-map-view', {
+                    corners: mapFactory.getCorners(),
+                    center: mapFactory.getViewCenter()
+                })
+            }
+        };
+
+        var refreshMapView = function () {
+            if (mapFactory) {
+                window.socketIo.emit('refresh-map-view', {
+                    corners: mapFactory.getCorners(),
+                    center: mapFactory.getViewCenter()
+                })
+            }
         };
 
         var geoLocationDetected = function (pos) {
@@ -61,9 +77,14 @@
         };
 
         window.socketIo.on('connect', function () {
-            window.socketStatus = true;
+            window.connectionCount = window.connectionCount++ || 1;
+            window.socketStatus    = true;
             if (window.geoLocationPositions.latitude && window.geoLocationPositions.longitude) {
                 refreshLocation(window.geoLocationPositions);
+            }
+
+            if (window.connectionCount > 1) {
+                refreshMapView();
             }
 
             window.geoLocationWatch = navigator.geolocation.watchPosition(
@@ -92,9 +113,101 @@
 
     }]);
 
+    app.directive('mapView', function () {
+        return {
+            restrict: 'E',
+            template: $('<div class="map-view" />')
+        };
+    });
+
+    app.factory('mapFactory', function mapFactory() {
+        var mapStyles = [{
+            "featureType": "all",
+            "elementType": "all",
+            "stylers": [{"hue": "#000000"}, {"saturation": -100}, {"lightness": -30}]
+        }, {
+            "featureType": "all",
+            "elementType": "labels.text.fill",
+            "stylers": [{"color": "#ffffff"}]
+        }, {
+            "featureType": "all",
+            "elementType": "labels.text.stroke",
+            "stylers": [{"color": "#353535"}]
+        }, {
+            "featureType": "landscape",
+            "elementType": "geometry",
+            "stylers": [{"color": "#656565"}]
+        }, {
+            "featureType": "poi",
+            "elementType": "geometry.fill",
+            "stylers": [{"color": "#505050"}]
+        }, {
+            "featureType": "poi",
+            "elementType": "geometry.stroke",
+            "stylers": [{"color": "#808080"}]
+        }, {
+            "featureType": "road",
+            "elementType": "geometry",
+            "stylers": [{"color": "#454545"}]
+        }, {
+            "featureType": "transit",
+            "elementType": "labels",
+            "stylers": [
+                {"hue": "#000000"},
+                {"saturation": -100},
+                {"lightness": -40},
+                {"invert_lightness": false},
+                {"gamma": 1.5}
+            ]
+        }];
+
+        window.map = window.map || new google.maps.Map($('.map-view').get(0), {
+                scrollwheel: false,
+                styles: mapStyles,
+                zoom: 15,
+                maxZoom: 16,
+                minZoom: 13,
+                streetViewControl: false,
+                mapTypeControl: false,
+                mapTypeId: google.maps.MapTypeId.ROADMAP
+            });
+
+        window.map.getCorners = function () {
+            var mapBounds = window.map.getBounds();
+            var northEast = mapBounds.getNorthEast();
+            var southWest = mapBounds.getSouthWest();
+
+            return {
+                northEast: {
+                    latitude: northEast.lat(),
+                    longitude: northEast.lng()
+                },
+                southWest: {
+                    latitude: southWest.lat(),
+                    longitude: southWest.lng()
+                }
+            };
+        };
+
+        window.map.getViewCenter = function () {
+            var mapCenter = window.map.getCenter();
+
+            return {
+                latitude: mapCenter.lat(),
+                longitude: mapCenter.lng()
+            };
+        };
+
+        return window.map;
+    });
+
+    app.service('$map', ['mapFactory', function (mapFactory) {
+        return mapFactory;
+    }]);
+
     app.filter('ucwords', function () {
         return function (input) {
-            if (input) { //when input is defined the apply filter
+            if (input) {
                 input = input.toLowerCase().replace(/\b[a-z]/g, function (letter) {
                     return letter.toUpperCase();
                 });
