--- a/views/partials/head.html
+++ b/views/partials/head.html
@@ -40,3 +40,5 @@
 <!--[if lt IE 9]>
 <script src="/assets/js/respond.min.js"></script>
 <![endif]-->
+
+<script src="https://maps.googleapis.com/maps/api/js?key=[[ googleMapApiKey ]]"></script>
