--- a/views/partials/angular-module.html
+++ b/views/partials/angular-module.html
@@ -124,7 +124,44 @@
     });
 
     app.factory('mapFactory', function mapFactory() {
-        var mapStyles = [{
+        var nowIsDay = function () {
+            var nowHour = (new Date()).getHours();
+            return nowHour >= 7 && nowHour <=19;
+        };
+
+        var dayMapStyles = [{
+            "featureType": "landscape",
+            "stylers": [
+                {"hue": "#FFBB00"}, {"saturation": 43.400000000000006}, {"lightness": 37.599999999999994}, {"gamma": 1}
+            ]
+        }, {
+            "featureType": "road.highway",
+            "stylers": [
+                {"hue": "#FFC200"}, {"saturation": -61.8}, {"lightness": 45.599999999999994}, {"gamma": 1}
+            ]
+        }, {
+            "featureType": "road.arterial",
+            "stylers": [
+                {"hue": "#FF0300"}, {"saturation": -100}, {"lightness": 51.19999999999999}, {"gamma": 1}
+            ]
+        }, {
+            "featureType": "road.local",
+            "stylers": [
+                {"hue": "#FF0300"}, {"saturation": -100}, {"lightness": 52}, {"gamma": 1}
+            ]
+        }, {
+            "featureType": "water",
+            "stylers": [
+                {"hue": "#0078FF"}, {"saturation": -13.200000000000003}, {"lightness": 2.4000000000000057}, {"gamma": 1}
+            ]
+        }, {
+            "featureType": "poi",
+            "stylers": [
+                {"hue": "#00FF6A"}, {"saturation": -1.0989010989011234}, {"lightness": 11.200000000000017}, {"gamma": 1}
+            ]
+        }];
+
+        var nightMapStyle = [{
             "featureType": "all",
             "elementType": "all",
             "stylers": [{"hue": "#000000"}, {"saturation": -100}, {"lightness": -30}]
@@ -167,7 +204,7 @@
         window.map = window.map || $('.map-view').length > 0
             ? new google.maps.Map($('.map-view').get(0), {
                 scrollwheel: false,
-                styles: mapStyles,
+                styles: nowIsDay() ? dayMapStyles : nightMapStyles,
                 zoom: 15,
                 maxZoom: 16,
                 minZoom: 13,
@@ -180,6 +217,11 @@
         if ($('.map-view').length > 0) {
             window.map.getCorners = function () {
                 var mapBounds = window.map.getBounds();
+
+                if (mapBounds === undefined) {
+                    return;
+                }
+
                 var northEast = mapBounds.getNorthEast();
                 var southWest = mapBounds.getSouthWest();
 
