--- a/views/partials/angular-module.html
+++ b/views/partials/angular-module.html
@@ -129,7 +129,7 @@
             return nowHour >= 7 && nowHour <=19;
         };
 
-        var dayMapStyles = [{
+        var dayMapStyle = [{
             "featureType": "landscape",
             "stylers": [
                 {"hue": "#FFBB00"}, {"saturation": 43.400000000000006}, {"lightness": 37.599999999999994}, {"gamma": 1}
@@ -204,7 +204,7 @@
         window.map = window.map || $('.map-view').length > 0
             ? new google.maps.Map($('.map-view').get(0), {
                 scrollwheel: false,
-                styles: nowIsDay() ? dayMapStyles : nightMapStyles,
+                styles: nowIsDay() ? dayMapStyle : nightMapStyle,
                 zoom: 15,
                 maxZoom: 16,
                 minZoom: 13,
